Used custom cache manager in cache controller